Replaced .picture with picture in comment in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     表示する内容はREADME.mdの完成形の画像を参照すること。
 
     1. フレックスコンテナーのクラス属性値は `container` とする
-    2. フレックスアイテムのクラス属性値は `.picture` とする
+    2. フレックスアイテムのクラス属性値は `picture` とする
     3. pictureクラス内に表示するテキストである「題名: 〇〇」の部分はp要素を使い、class属性値は `picture-title` とする
   -->
 
