--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>CSSエクササイズ中級編その2</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <h1>イメージギャラリー(flexboxの復習)</h1>
   <!--
@@ -15,6 +17,28 @@
     2. フレックスアイテムのクラス属性値は `picture` とする
     3. pictureクラス内に表示するテキストである「題名: 〇〇」の部分はp要素を使い、class属性値は `picture-title` とする
   -->
-
+  <div class="container">
+    <div class="picture">
+      <img src="https://www.pakutaso.com/shared/img/thumb/christmasA7_03361_TP_V.jpg">
+      <p class="picture-title">クリスマス会の最前列にいるタイプ</p>
+    </div>
+    <div class="picture">
+      <img src="https://www.pakutaso.com/shared/img/thumb/christmasA7_03361_TP_V.jpg">
+      <p class="picture-title">クリスマス会の最前列にいるタイプ</p>
+    </div>
+    <div class="picture">
+      <img src="https://www.pakutaso.com/shared/img/thumb/christmasA7_03361_TP_V.jpg">
+      <p class="picture-title">クリスマス会の最前列にいるタイプ</p>
+    </div>
+    <div class="picture">
+      <img src="https://www.pakutaso.com/shared/img/thumb/christmasA7_03361_TP_V.jpg">
+      <p class="picture-title">クリスマス会の最前列にいるタイプ</p>
+    </div>
+    <div class="picture">
+      <img src="https://www.pakutaso.com/shared/img/thumb/christmasA7_03361_TP_V.jpg">
+      <p class="picture-title">クリスマス会の最前列にいるタイプ</p>
+    </div>
+  </div>
 </body>
+
 </html>
