--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <p class="picture-title">クリスマス会の最前列にいるタイプ</p>
     </div>
     <div class="picture">
-      <img src="https://www.pakutaso.com/shared/img/thumb/christmasA7_03361_TP_V.jpg">
-      <p class="picture-title">クリスマス会の最前列にいるタイプ</p>
+      <img src="https://www.pakutaso.com/shared/img/thumb/christmasA7_03374_TP_V.jpg">
+      <p class="picture-title">クリスマス寝過ごした猫</p>
     </div>
     <div class="picture">
       <img src="https://www.pakutaso.com/shared/img/thumb/christmasA7_03361_TP_V.jpg">
